@@ -252,68 +252,77 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#h:161F43B1">News</a>
+<li><a href="#h-161F43B1">News</a>
 <ul>
-<li><a href="#h:7AC1E6CA">9/17/2019, 2019 Gateways and eScience Conferences</a></li>
-<li><a href="#h:7E4293A6">8/28/2019, Unidata JupyterHub Back Online</a></li>
+<li><a href="#h-BD3E46F8">10/30/2019, Python Workshop at the AMS 2020 Student Conference</a></li>
+<li><a href="#h-7AC1E6CA">9/17/2019, 2019 Gateways and eScience Conferences</a></li>
+<li><a href="#h-7E4293A6">8/28/2019, Unidata JupyterHub Back Online</a></li>
 </ul>
 </li>
-<li><a href="#h:BEB7506B">Introduction</a></li>
-<li><a href="#h:D1710E1B">JupyterHub</a></li>
-<li><a href="#h:9690244B">THREDDS Data Server</a></li>
-<li><a href="#h:6B491DAA">THREDDS AWS Nexrad Server</a></li>
-<li><a href="#h:9ADDB20C">AWIPS EDEX</a></li>
-<li><a href="#h:DBF62CF5">RAMADDA Geoscience CMS</a></li>
-<li><a href="#h:7DD1393A">LDM</a></li>
-<li><a href="#h:4AD59494">ADDE</a></li>
-<li><a href="#h:D0BA253D">IDV Resources</a>
+<li><a href="#h-BEB7506B">Introduction</a></li>
+<li><a href="#h-D1710E1B">JupyterHub</a></li>
+<li><a href="#h-9690244B">THREDDS Data Server</a></li>
+<li><a href="#h-6B491DAA">THREDDS AWS Nexrad Server</a></li>
+<li><a href="#h-9ADDB20C">AWIPS EDEX</a></li>
+<li><a href="#h-DBF62CF5">RAMADDA Geoscience CMS</a></li>
+<li><a href="#h-7DD1393A">LDM</a></li>
+<li><a href="#h-4AD59494">ADDE</a></li>
+<li><a href="#h-D0BA253D">IDV Resources</a>
 <ul>
-<li><a href="#h:D76F2C8F">Running the IDV on Jetstream</a></li>
-<li><a href="#h:05438731">IDV Jetstream Plugin</a></li>
+<li><a href="#h-D76F2C8F">Running the IDV on Jetstream</a></li>
+<li><a href="#h-05438731">IDV Jetstream Plugin</a></li>
 </ul>
 </li>
-<li><a href="#h:20A85AD4">Conference Presentations</a>
+<li><a href="#h-20A85AD4">Conference Presentations</a>
 <ul>
-<li><a href="#h:796B2372">Past Presentations</a></li>
-<li><a href="#h:BD0797EC">Forthcoming Presentations</a></li>
+<li><a href="#h-796B2372">Past Presentations</a></li>
+<li><a href="#h-BD0797EC">Forthcoming Presentations</a></li>
 </ul>
 </li>
-<li><a href="#h:632926D5">Under the Hood</a></li>
-<li><a href="#h:DA850DB8">System Status</a></li>
-<li><a href="#h:15E3DA2C">Contact</a></li>
-<li><a href="#h:34E7E087">Acknowledgments and Bibliography</a>
+<li><a href="#h-632926D5">Under the Hood</a></li>
+<li><a href="#h-DA850DB8">System Status</a></li>
+<li><a href="#h-15E3DA2C">Contact</a></li>
+<li><a href="#h-34E7E087">Acknowledgments and Bibliography</a>
 <ul>
-<li><a href="#h:98F550D4">Acknowledgments</a>
+<li><a href="#h-98F550D4">Acknowledgments</a>
 <ul>
-<li><a href="#h:F709195C">National Science Foundation</a></li>
-<li><a href="#h:B0693B43">XSEDE ECSS</a></li>
+<li><a href="#h-F709195C">National Science Foundation</a></li>
+<li><a href="#h-B0693B43">XSEDE ECSS</a></li>
 </ul>
 </li>
-<li><a href="#h:9DC92977">Bibliography</a></li>
+<li><a href="#h-9DC92977">Bibliography</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="org75a35b9" class="figure">
+<div id="org037b2f4" class="figure">
 <p><img src="jupyterhub.png" alt="jupyterhub.png" style="border:2px solid #ccc;" />
 </p>
 <p><span class="figure-number">Figure 1: </span><i>Unidata Python Gallery GOES-16 true color notebook by Brian Blaylock available via the Unidata JupyterHub.</i></p>
 </div>
 
 <div id="outline-container-org9a3d9df" class="outline-2">
-<h2 id="h:161F43B1">News</h2>
-<div class="outline-text-2" id="text-h:161F43B1">
+<h2 id="h-161F43B1">News</h2>
+<div class="outline-text-2" id="text-h-161F43B1">
 <p>
 <a href="news.xml"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/43/Feed-icon.svg/32px-Feed-icon.svg.png"></a>
 </p>
 </div>
 
+<div id="outline-container-orgb10c3d3" class="outline-3">
+<h3 id="h-BD3E46F8">10/30/2019, Python Workshop at the AMS 2020 Student Conference</h3>
+<div class="outline-text-3" id="text-h-BD3E46F8">
+<p>
+We are excited to announce Unidata will be hosting a Python Workshop at the <a href="https://annual.ametsoc.org/index.cfm/2020/programs/conferences-and-symposia/19th-annual-student-conference/">19th Annual Student Conference</a> for the 2020 American Meteorological Society meeting in Boston, Massachusetts. The workshop will employ a JupyterHub running on the Unidata Science Gateway. Additional details will be forthcoming.
+</p>
+</div>
+</div>
 
 <div id="outline-container-org788f593" class="outline-3">
-<h3 id="h:7AC1E6CA">9/17/2019, 2019 Gateways and eScience Conferences</h3>
-<div class="outline-text-3" id="text-h:7AC1E6CA">
+<h3 id="h-7AC1E6CA">9/17/2019, 2019 Gateways and eScience Conferences</h3>
+<div class="outline-text-3" id="text-h-7AC1E6CA">
 <p>
 The <a href="https://sciencegateways.org/web/gateways2019">Gateways 2019 and co-located eScience 2019 conferences</a> will be held in San Diego, California September 23–27. We will be presenting a poster entitled: <a href="https://doi.org/10.17605/OSF.IO/W7SV8">A JupyterHub for Atmospheric Science Research and Education on the Unidata Science Gateway</a>.
 </p>
@@ -321,8 +330,8 @@ The <a href="https://sciencegateways.org/web/gateways2019">Gateways 2019 and co-
 </div>
 
 <div id="outline-container-org18e2635" class="outline-3">
-<h3 id="h:7E4293A6">8/28/2019, Unidata JupyterHub Back Online</h3>
-<div class="outline-text-3" id="text-h:7E4293A6">
+<h3 id="h-7E4293A6">8/28/2019, Unidata JupyterHub Back Online</h3>
+<div class="outline-text-3" id="text-h-7E4293A6">
 <p>
 After a summer outage, the <a href="https://jupyterhub.unidata.ucar.edu">Unidata JupyterHub</a> is back online. Login with your GitHub credentials to explore one of many Unidata Jupyter notebooks.
 </p>
@@ -331,8 +340,8 @@ After a summer outage, the <a href="https://jupyterhub.unidata.ucar.edu">Unidata
 </div>
 
 <div id="outline-container-org2aac55a" class="outline-2">
-<h2 id="h:BEB7506B">Introduction</h2>
-<div class="outline-text-2" id="text-h:BEB7506B">
+<h2 id="h-BEB7506B">Introduction</h2>
+<div class="outline-text-2" id="text-h-BEB7506B">
 <p>
 Welcome to the <a href="http://www.unidata.ucar.edu/">Unidata</a> Science Gateway on the National Science Foundation <a href="https://portal.xsede.org/jetstream">Jetstream Cloud</a>. Unidata is a diverse community of education and research institutions with the common goal of sharing geoscience data and the tools to access and visualize that data. For more than 30 years, Unidata has been providing data, software tools, and support to enhance Earth-system education and research. Funded primarily by the National Science Foundation (NSF), Unidata is one of the University Corporation for Atmospheric Research (UCAR)'s Community Programs (UCP).
 </p>
@@ -343,9 +352,9 @@ As part of our current <a href="https://www.unidata.ucar.edu/publications/direct
 </div>
 </div>
 
-<div id="outline-container-org1e41a1b" class="outline-2">
-<h2 id="h:D1710E1B">JupyterHub</h2>
-<div class="outline-text-2" id="text-h:D1710E1B">
+<div id="outline-container-org955aa00" class="outline-2">
+<h2 id="h-D1710E1B">JupyterHub</h2>
+<div class="outline-text-2" id="text-h-D1710E1B">
 <p>
 <a href="https://jupyterhub.unidata.ucar.edu">JupyterHub server on Jetstream</a> (<a href="https://github.com/">GitHub login</a> required)
 </p>
@@ -367,8 +376,8 @@ This JupyterHub is now open to anyone with an <a href="https://github.com">GitHu
 </div>
 
 <div id="outline-container-org1fee24b" class="outline-2">
-<h2 id="h:9690244B">THREDDS Data Server</h2>
-<div class="outline-text-2" id="text-h:9690244B">
+<h2 id="h-9690244B">THREDDS Data Server</h2>
+<div class="outline-text-2" id="text-h-9690244B">
 <p>
 <a href="http://thredds-jetstream.unidata.ucar.edu/thredds/catalog.html">TDS installation on Jetstream</a>
 </p>
@@ -384,8 +393,8 @@ This TDS can be accessed from the  <a href="http://www.unidata.ucar.edu/software
 </div>
 
 <div id="outline-container-org5c01826" class="outline-2">
-<h2 id="h:6B491DAA">THREDDS AWS Nexrad Server</h2>
-<div class="outline-text-2" id="text-h:6B491DAA">
+<h2 id="h-6B491DAA">THREDDS AWS Nexrad Server</h2>
+<div class="outline-text-2" id="text-h-6B491DAA">
 <p>
 <a href="http://thredds-aws.unidata.ucar.edu/thredds/catalog.html">THREDDS AWS Nexrad Installation on Jetstream</a>
 </p>
@@ -397,8 +406,8 @@ In collaboration with the <a href="https://www.noaa.gov/big-data-project">NOAA B
 </div>
 
 <div id="outline-container-org9418d7d" class="outline-2">
-<h2 id="h:9ADDB20C">AWIPS EDEX</h2>
-<div class="outline-text-2" id="text-h:9ADDB20C">
+<h2 id="h-9ADDB20C">AWIPS EDEX</h2>
+<div class="outline-text-2" id="text-h-9ADDB20C">
 <p>
 EDEX installation on Jetstream: <code>edex-cloud.unidata.ucar.edu</code>
 </p>
@@ -410,8 +419,8 @@ AWIPS is a meteorological display and analysis system used by the National Weath
 </div>
 
 <div id="outline-container-org5f5fbae" class="outline-2">
-<h2 id="h:DBF62CF5">RAMADDA Geoscience CMS</h2>
-<div class="outline-text-2" id="text-h:DBF62CF5">
+<h2 id="h-DBF62CF5">RAMADDA Geoscience CMS</h2>
+<div class="outline-text-2" id="text-h-DBF62CF5">
 <p>
 <a href="http://ramadda-jetstream.unidata.ucar.edu/repository">RAMADDA installation on Jetstream</a>
 </p>
@@ -423,8 +432,8 @@ AWIPS is a meteorological display and analysis system used by the National Weath
 </div>
 
 <div id="outline-container-orgb26f555" class="outline-2">
-<h2 id="h:7DD1393A">LDM</h2>
-<div class="outline-text-2" id="text-h:7DD1393A">
+<h2 id="h-7DD1393A">LDM</h2>
+<div class="outline-text-2" id="text-h-7DD1393A">
 <p>
 <a href="http://rtstats.unidata.ucar.edu/cgi-bin/rtstats/rtstats_summary_volume?idd-relay.jetstream-cloud.org+GRAPH">LDM installation on Jetstream</a>
 </p>
@@ -436,8 +445,8 @@ The Unidata <a href="http://www.unidata.ucar.edu/software/ldm/">Local Data Manag
 </div>
 
 <div id="outline-container-orgd3a2f11" class="outline-2">
-<h2 id="h:4AD59494">ADDE</h2>
-<div class="outline-text-2" id="text-h:4AD59494">
+<h2 id="h-4AD59494">ADDE</h2>
+<div class="outline-text-2" id="text-h-4AD59494">
 <p>
 ADDE installation on Jetstream: <code>adde://adde-jetstream.unidata.ucar.edu:112</code>
 </p>
@@ -449,16 +458,16 @@ ADDE installation on Jetstream: <code>adde://adde-jetstream.unidata.ucar.edu:112
 </div>
 
 <div id="outline-container-org260c8b8" class="outline-2">
-<h2 id="h:D0BA253D">IDV Resources</h2>
-<div class="outline-text-2" id="text-h:D0BA253D">
+<h2 id="h-D0BA253D">IDV Resources</h2>
+<div class="outline-text-2" id="text-h-D0BA253D">
 <p>
 The <a href="https://www.unidata.ucar.edu/software/idv/">Unidata Integrated Data Viewer</a> (IDV) is a desktop application for viewing data in two and three dimensions. It excels at bringing together geoscience data from disparate sources into one integrated display.
 </p>
 </div>
 
 <div id="outline-container-orga6bf0c9" class="outline-3">
-<h3 id="h:D76F2C8F">Running the IDV on Jetstream</h3>
-<div class="outline-text-3" id="text-h:D76F2C8F">
+<h3 id="h-D76F2C8F">Running the IDV on Jetstream</h3>
+<div class="outline-text-3" id="text-h-D76F2C8F">
 <p>
 For those who have a Jetstream allocation (e.g., startup, education, research), an IDV image is available when selecting VMs through the <a href="https://use.jetstream-cloud.org/application/images">Jetstream Atmosphere dashboard</a>. If you do not have a Jetstream allocation, it is possible to obtain a <a href="https://iujetstream.atlassian.net/wiki/spaces/JWT/pages/76150553/Get+a+Jetstream+Trial+Access+account">Jetstream Trial Access account</a>. When searching for images, search for "IDV". You will find the <code>Unidata IDV &lt;version&gt;</code> image. Launching that image will then allow you to "Open Web Desktop" where the IDV will be available pre-loaded with the Jetstream plugin. The catalogs available via the IDV Dashboard, Data Choosers will default to the TDS and RAMADDA servers running on Jetstream enabling data-proximate performance, especially for large datasets. You can also select image sizes that are appropriate to your goals. For example, if working with a data intensive bundle, you could choose an m1.medium VM with 6 vCPUS, 16 GB RAM.
 </p>
@@ -466,8 +475,8 @@ For those who have a Jetstream allocation (e.g., startup, education, research), 
 </div>
 
 <div id="outline-container-orgc50014f" class="outline-3">
-<h3 id="h:05438731">IDV Jetstream Plugin</h3>
-<div class="outline-text-3" id="text-h:05438731">
+<h3 id="h-05438731">IDV Jetstream Plugin</h3>
+<div class="outline-text-3" id="text-h-05438731">
 <p>
 The IDV Jetstream plugin allows easy access to Jetstream installations of the TDS, RAMADDA and ADDE from the IDV. The plugin URL is <code>https://science-gateway.unidata.ucar.edu/jetstream.jar</code>. <a href="https://www.unidata.ucar.edu/software/idv/docs/workshop/advanced/PluginManager.html">See here for how to install an IDV plugin from a URL</a>.
 </p>
@@ -476,13 +485,13 @@ The IDV Jetstream plugin allows easy access to Jetstream installations of the TD
 </div>
 
 <div id="outline-container-org779ba13" class="outline-2">
-<h2 id="h:20A85AD4">Conference Presentations</h2>
-<div class="outline-text-2" id="text-h:20A85AD4">
+<h2 id="h-20A85AD4">Conference Presentations</h2>
+<div class="outline-text-2" id="text-h-20A85AD4">
 </div>
 
 <div id="outline-container-org87ed533" class="outline-3">
-<h3 id="h:796B2372">Past Presentations</h3>
-<div class="outline-text-3" id="text-h:796B2372">
+<h3 id="h-796B2372">Past Presentations</h3>
+<div class="outline-text-3" id="text-h-796B2372">
 <ul class="org-ul">
 <li>ESIP Summer Meeting 2017 | July 25-28, 2017 – Bloomington, IN USA
 <ul class="org-ul">
@@ -504,23 +513,24 @@ The IDV Jetstream plugin allows easy access to Jetstream installations of the TD
 <li><a href="https://ams.confex.com/ams/2019Annual/meetingapp.cgi/Paper/354804">A Cloud-Based Science Gateway for Enabling Open and Reproducible Science</a></li>
 </ul></li>
 <li><a href="https://doi.org/10.6084/m9.figshare.8945078.v1">ESIP Summer Meeting 2019 | July 16-19, 2019 – Tacoma, WA USA</a></li>
+<li><a href="https://doi.org/10.17605/OSF.IO/W7SV8">Gateways 2019 | September 23–25, 2019 – San Diego, CA USA</a></li>
 </ul>
 </div>
 </div>
 
 <div id="outline-container-org4923246" class="outline-3">
-<h3 id="h:BD0797EC">Forthcoming Presentations</h3>
-<div class="outline-text-3" id="text-h:BD0797EC">
+<h3 id="h-BD0797EC">Forthcoming Presentations</h3>
+<div class="outline-text-3" id="text-h-BD0797EC">
 <ul class="org-ul">
-<li><a href="https://sciencegateways.org/web/gateways2019/home">Gateways 2019 | September 23–25, 2019 – San Diego, CA USA</a></li>
+<li><a href="https://annual.ametsoc.org/index.cfm/2020/programs/conferences-and-symposia/19th-annual-student-conference/">2020 AMS Annual Meeting | January 12–16, 2020 – Boston, MA USA</a></li>
 </ul>
 </div>
 </div>
 </div>
 
 <div id="outline-container-org662e855" class="outline-2">
-<h2 id="h:632926D5">Under the Hood</h2>
-<div class="outline-text-2" id="text-h:632926D5">
+<h2 id="h-632926D5">Under the Hood</h2>
+<div class="outline-text-2" id="text-h-632926D5">
 <p>
 The implementation of this effort is described here: <a href="https://github.com/Unidata/xsede-jetstream">https://github.com/Unidata/xsede-jetstream</a>.
 </p>
@@ -528,8 +538,8 @@ The implementation of this effort is described here: <a href="https://github.com
 </div>
 
 <div id="outline-container-orge578e13" class="outline-2">
-<h2 id="h:DA850DB8">System Status</h2>
-<div class="outline-text-2" id="text-h:DA850DB8">
+<h2 id="h-DA850DB8">System Status</h2>
+<div class="outline-text-2" id="text-h-DA850DB8">
 <p>
 <a href="https://conan.unidata.ucar.edu/bb/">Internal only Unidata system monitoring link</a>
 </p>
@@ -545,8 +555,8 @@ The implementation of this effort is described here: <a href="https://github.com
 </div>
 
 <div id="outline-container-org67b9c23" class="outline-2">
-<h2 id="h:15E3DA2C">Contact</h2>
-<div class="outline-text-2" id="text-h:15E3DA2C">
+<h2 id="h-15E3DA2C">Contact</h2>
+<div class="outline-text-2" id="text-h-15E3DA2C">
 <p>
 If you wish to contact Unidata concerning this science gateway, please contact <code>support@unidata.ucar.edu</code>.
 </p>
@@ -554,18 +564,18 @@ If you wish to contact Unidata concerning this science gateway, please contact <
 </div>
 
 <div id="outline-container-orgc035a14" class="outline-2">
-<h2 id="h:34E7E087">Acknowledgments and Bibliography</h2>
-<div class="outline-text-2" id="text-h:34E7E087">
+<h2 id="h-34E7E087">Acknowledgments and Bibliography</h2>
+<div class="outline-text-2" id="text-h-34E7E087">
 </div>
 
 <div id="outline-container-orgb868a30" class="outline-3">
-<h3 id="h:98F550D4">Acknowledgments</h3>
-<div class="outline-text-3" id="text-h:98F550D4">
+<h3 id="h-98F550D4">Acknowledgments</h3>
+<div class="outline-text-3" id="text-h-98F550D4">
 </div>
 
 <div id="outline-container-org0101c33" class="outline-4">
-<h4 id="h:F709195C">National Science Foundation</h4>
-<div class="outline-text-4" id="text-h:F709195C">
+<h4 id="h-F709195C">National Science Foundation</h4>
+<div class="outline-text-4" id="text-h-F709195C">
 <p>
 Funding for this project was generously provided by the National Science Foundation (<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1901712">Grant NSF-1901712</a>)
 </p>
@@ -573,8 +583,8 @@ Funding for this project was generously provided by the National Science Foundat
 </div>
 
 <div id="outline-container-org2b14157" class="outline-4">
-<h4 id="h:B0693B43">XSEDE ECSS</h4>
-<div class="outline-text-4" id="text-h:B0693B43">
+<h4 id="h-B0693B43">XSEDE ECSS</h4>
+<div class="outline-text-4" id="text-h-B0693B43">
 <p>
 We thank Brian Beck, Maytal Dahan, Jeremy Fischer, Victor Hazlewood, Peg Lindenlaub, Suresh Marru, Lance Moxley, Marlon Pierce, Semir Sarajlic, Craig Alan Stewart, George Wm Turner, Nancy Wilkins-Diehr, Nicole Wolter and Andrea Zonca for their assistance with this effort, which was made possible through the XSEDE Extended Collaborative Support Service (ECSS) program.
 </p>
@@ -583,8 +593,8 @@ We thank Brian Beck, Maytal Dahan, Jeremy Fischer, Victor Hazlewood, Peg Lindenl
 </div>
 
 <div id="outline-container-orgd54a6aa" class="outline-3">
-<h3 id="h:9DC92977">Bibliography</h3>
-<div class="outline-text-3" id="text-h:9DC92977">
+<h3 id="h-9DC92977">Bibliography</h3>
+<div class="outline-text-3" id="text-h-9DC92977">
 <div id="bibliography">
 <h2>References</h2>
 
@@ -1048,7 +1058,7 @@ The Extreme Science and Engineering Discovery Environment
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Date: 2019-09-18 16:02:52 MDT</p>
+<p class="date">Date: 2019-10-30 17:43:54 MDT</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
